# AI-Personal-Assistant

./: .gitignore  README.md  README_PRODUCTION_READY.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml  requirements.step24.txt  requirements.txt  start.sh
backend/_model_backups/: calendar_event.py.bak  notification.py.bak  web_push_subscription.py.bak
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_multi_calendar_sources.py  0003_add_connected_account_id_to_calendar_events.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  crypto.py  errors.py  logging.py  middleware.py  rate_limit.py  security.py  token_crypto.py
backend/app/crud/: calendar_events.py  calendar_sources.py  connected_accounts.py  events.py  notification_channels.py  notifications.py  provider_secrets.py  reminders.py  secrets.py  tasks.py  users.py  web_push.py  web_push_subscriptions.py
backend/app/db/: init_db.py  session.py
backend/app/integrations/: registry.py
backend/app/models/: __init__.py  calendar_event.py  calendar_events.py  calendar_sources.py  connected_account.py  enums.py  notification.py  notification_channel.py  notification_channels.py  notifications.py  planning_result.py  provider_secret.py  provider_secrets.py  user.py  (+5 more)
backend/tests/: conftest.py  test_01_health_and_openapi.py  test_02_auth.py  test_03_tasks_and_agenda.py  test_04_notification_center.py  test_05_web_push.py  test_06_secrets.py  test_07_rate_limit.py  test_08_automation_monitoring.py
(+84 files in other folders)
