[project]
name = "ai-personal-assistant-backend"
version = "0.1.0"
description = "Backend API for AI Personal Assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
